--- a/config-REDACTED.yaml
+++ b/config-REDACTED.yaml
@@ -1,16 +1,27 @@
----
-registry:
-  server: https://index.docker.io/v1/
-  username: 
-  password: 
+contour:
+  envoy:
+    service:
+      type: ClusterIP
+    hostPorts:
+      enable: true
 
-image_prefix: myrepo/demo-
+knative_serving:
+  domain:
+    type: real
+    name: 127-0-0-1.sslip.io
 
 kpack:
-  # credentials for the container registry you'll be using to store images
+  kp_default_repository: https://index.docker.io/v1/
+  kp_default_repository_username: [your username]
+  kp_default_repository_password: [your password]
+
+  registry:
+    url: [REGISTRY_URL]
+    username: [REGISTRY_USERNAME]
+    password: [REGISTRY_PASSWORD]
   builder:
     # path to the container repository where kpack build artifacts are stored
-    tag: myrepo/builder
+    tag: [REGISTRY_TAG]
   # A comma-separated list of languages e.g. [java,nodejs] that will be supported for development
   # Allowed values are:
   # - java
@@ -20,6 +31,7 @@ kpack:
   # - ruby
   # - php
   languages: [java]
+  image_prefix: [REGISTRY_PREFIX]
 
 vendir:
   # For installation of CLI binaries
@@ -31,22 +43,9 @@ vendir:
   # getLatest overrides declared versions (disable using getLatest: "")
   getLatest: ""
   versions:
-    cartographer: 0.2.1
-    cert-manager: 1.5.3
-    kn: 1.2.0
+    kn: 1.3.1
     kp: 0.4.2
-    kpack: 0.5.0
-    kubectl: 1.23.1
-    secretgen-controller: 0.6.0
-    source-controller: 0.19.2
-    tce: 0.9.1
-    yq: 4.16.1
-
-# knative config
-envoy:
-  service:
-    type: ClusterIP
-domain:
-  name: 127-0-0-1.nip.io
-  type: real
-
+    kubectl: 1.23.5
+    tce: 0.11.0
+    tce-apps-plugin: 0.6.0
+    yq: 4.24.5
