--- a/setup/vendir.yml
+++ b/setup/vendir.yml
@@ -24,60 +24,6 @@ apiVersion: vendir.k14s.io/v1alpha1
 kind: Config
 minimumRequiredVersion: 0.8.0
 directories:
-  #! Product release files
-  - path: vendir/cert-manager
-    contents:
-    - path: .
-      githubRelease:
-        slug: jetstack/cert-manager
-        tagSelection:
-          semver:
-            constraints: #@ getVersion("cert-manager")
-        assetNames: [ "cert-manager.yaml" ]
-        disableAutoChecksumValidation: true
-  - path: vendir/secretgen-controller
-    contents:
-    - path: .
-      githubRelease:
-        slug: vmware-tanzu/carvel-secretgen-controller
-        tagSelection:
-          semver:
-            constraints: #@ getVersion("secretgen-controller")
-        assetNames: ["release.yml"]
-        disableAutoChecksumValidation: true
-  - path: vendir/cartographer
-    contents:
-    - path: .
-      githubRelease:
-        slug: vmware-tanzu/cartographer
-        tagSelection:
-          semver:
-            constraints: #@ getVersion("cartographer")
-            prereleases:
-              identifiers: [ "rc" ]
-        assetNames: ["cartographer.yaml"]
-        disableAutoChecksumValidation: true
-  - path: vendir/source-controller
-    contents:
-      - path: .
-        githubRelease:
-          slug: fluxcd/source-controller
-          tagSelection:
-            semver:
-              constraints: #@ getVersion("source-controller")
-          assetNames: ["source-controller.crds.yaml","source-controller.deployment.yaml"]
-          disableAutoChecksumValidation: true
-  - path: vendir/kpack
-    contents:
-    - path: .
-      githubRelease:
-        slug: pivotal/kpack
-        tagSelection:
-          semver:
-            constraints: #@ getVersion("kpack")
-        assetNames:
-          - #@ "release-*.yaml"
-        disableAutoChecksumValidation: true
   #! Binaries
   - path: vendir/binaries
     contents:
@@ -125,27 +71,25 @@ directories:
         #@ else:
         url: #@ "https://dl.k8s.io/release/v" + getFixedVersion("kubectl") + "/bin/" + os + "/" + arch + "/kubectl"
         #@ end
-    - path: standalone
-      http:
-        #@ if os == "darwin":
-        url: #@ "https://storage.googleapis.com/tce-tanzu-cli-plugins/build-tools/standalone/mac/tanzu-standalone"
-        #@ elif os == "linux":
-        url: #@ "https://storage.googleapis.com/tce-tanzu-cli-plugins/build-tools/standalone/linux/tanzu-standalone"
-        #@ else:
-        url: #@ "https://storage.googleapis.com/tce-tanzu-cli-plugins/build-tools/standalone/windows/tanzu-standalone.exe"
-        #@ end
-
-  #! TCE
-#!  - path: vendir/binaries-tce
-#!    contents:
-#!    - path: .
-#!      githubRelease:
-#!        slug: vmware-tanzu/community-edition
-#!        tagSelection:
-#!          semver:
-#!            constraints: #@ getVersion("tce")
-#!        assetNames:
-#!          - #@ "tce-" + os + "-" + arch + "-v*.tar.gz"
-#!        disableAutoChecksumValidation: true
+    - path: tce
+      githubRelease:
+        slug: vmware-tanzu/community-edition
+        tagSelection:
+          semver:
+            constraints: #@ getVersion("tce")
+        assetNames:
+          - #@ "tce-" + os + "-" + arch + "-v*.tar.gz"
+        disableAutoChecksumValidation: true
 #!        unpackArchive:
 #!          path: #@ "tce-" + os + "-" + arch + "-v*.tar.gz"
+    - path: tce-apps-cli-plugin
+      githubRelease:
+        slug: vmware-tanzu/apps-cli-plugin
+        tagSelection:
+          semver:
+            constraints: #@ getVersion("tce-apps-plugin")
+        assetNames:
+          - #@ "tanzu-apps-plugin-" + os + "-" + arch + "-v*.tar.gz"
+        disableAutoChecksumValidation: true
+#!        unpackArchive:
+#!          path: #@ "tanzu-apps-plugin-" + os + "-" + arch + "-v*.tar.gz"
